--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ button:hover {
 			Host: "smtp.gmail.com",
 			Username: "rentatenta.info@gmail.com", // change this to your Gmail username
 			Password: "uocmkdymztmldewo", // change this to your Gmail password
-			To: "your-email@example.com", // change this to your email address
+			To: "rentatenta.info@gmail.com", // change this to your email address
 			From: "rentatenta.info@gmail.com", // change this to your Gmail username
 			Subject: "New form submission",
 			Body: "Name: " + name + "<br>Email: " + email + "<br>Message: " + message
