--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ button:hover {
 		  Email.send({
 			Host: "smtp.gmail.com",
 			Username: "rentatenta.info@gmail.com", // change this to your Gmail username
-			Password: "uocmkdymztmldewo", // change this to your Gmail password
+			Password: "Shineonyourcrazydime", // change this to your Gmail password
 			To: "rentatenta.info@gmail.com", // change this to your email address
 			From: "rentatenta.info@gmail.com", // change this to your Gmail username
 			Subject: "New form submission",
